Set offline status to chat friends

--- a/sass/components/_chat-friends.scss
+++ b/sass/components/_chat-friends.scss
@@ -28,6 +28,11 @@
     background-color: rgba($color: variables.$primary-color, $alpha: 0.12);
   }
 
+  // chat-friend--offline
+  &--offline &__status {
+    background-color: variables.$offline-color;
+  }
+
   // chat-friend__avatar-status
   &__avatar-status {
     margin: 0;
@@ -50,6 +55,18 @@
   &__avatar {
     width: 100%;
     height: 100%;
+    background-color: variables.$primary-color;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  // chat-friend__avatar-name
+  &__avatar-name {
+    font-size: 1rem;
+    font-weight: 700;
+    color: #ffffff;
+    text-transform: uppercase;
   }
 
   // chat-friend__status
@@ -61,7 +78,7 @@
     position: absolute;
     top: 0;
     right: 0;
-    background-color: #29d612;
+    background-color: variables.$online-color;
 
     // z-index
     @include mixins.z-index("status");
