--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -16,6 +16,10 @@ $on-error-color: #ffffff;
 $scrollbar-track-color: #f3f3f3;
 $scrollbar-handle-color: rgba(0, 0, 0, 0.377);
 
+// online & offline status colors
+$online-color: #29d612;
+$offline-color: #d61222;
+
 // elevations
 $elevations: (
   no-elevation: 0,
