--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -36,9 +36,14 @@
     margin: 0;
     padding: 0;
 
-    // appbar__section--margin
-    &--margin {
+    // appbar__section--logo
+    &--logo {
       margin-left: 1rem;
+
+      // large-tablet
+      @include mixins.large-tablet {
+        margin-left: 0;
+      }
     }
 
     // appbar__section--right
@@ -60,6 +65,11 @@
     justify-content: center;
     align-items: center;
     cursor: pointer;
+
+    // large-tablet
+    @include mixins.large-tablet {
+      display: none;
+    }
   }
 
   // appbar__icon
