--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,6 +1,7 @@
 @use "../abstracts/variables";
 @use "../abstracts/mixins";
 @use "../base/typography";
+@use "../abstracts/animations" as anim;
 
 // appbar
 .appbar {
@@ -29,6 +30,25 @@
   @include mixins.tablet {
     padding-left: 1.5rem;
     padding-right: 1.5rem;
+  }
+
+  // appbar--open
+  &--open &__bar--top {
+    @include anim.animation-end {
+      transform: rotate(45deg) translate(5px, 5px);
+    }
+  }
+
+  &--open &__bar--middle {
+    @include anim.animation-end {
+      opacity: 0;
+    }
+  }
+
+  &--open &__bar--bottom {
+    @include anim.animation-end {
+      transform: rotate(-45deg) translate(5px, -5px);
+    }
   }
 
   // appbar__section
@@ -89,16 +109,35 @@
     height: 0.25rem;
     background-color: variables.$on-primary-color;
 
+    // animation start
+    @include anim.animation-start {
+      transition: transform 0.3s cubic-bezier(0.465, 0.183, 0.153, 0.946);
+    }
+
     // appbar__bar--top
     &--top {
+      // animation start
+      @include anim.animation-start {
+        transform: rotate(0deg);
+      }
     }
 
     // appbar__bar--middle
     &--middle {
+      // animation start
+      @include anim.animation-start {
+        transition: transform 0.3s cubic-bezier(0.465, 0.183, 0.153, 0.946),
+          opacity 0.3s cubic-bezier(0.465, 0.183, 0.153, 0.946);
+        opacity: 1;
+      }
     }
 
     // appbar__bar--bottom
     &--bottom {
+      // animation start
+      @include anim.animation-start {
+        transform: rotate(0deg);
+      }
     }
   }
 }
