Use animations variables

--- a/sass/abstracts/_animations.scss
+++ b/sass/abstracts/_animations.scss
@@ -1,6 +1,9 @@
 $animation-easing: cubic-bezier(0.465, 0.183, 0.153, 0.946);
 $animation-duration: 0.3s;
 
+$transform-transition: transform $animation-duration $animation-easing;
+$opacity-transition: opacity $animation-duration $animation-easing;
+
 @mixin animation-start {
   @content;
 }
