--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -111,7 +111,7 @@
 
     // animation start
     @include anim.animation-start {
-      transition: transform 0.3s cubic-bezier(0.465, 0.183, 0.153, 0.946);
+      transition: anim.$transform-transition;
     }
 
     // appbar__bar--top
@@ -126,8 +126,7 @@
     &--middle {
       // animation start
       @include anim.animation-start {
-        transition: transform 0.3s cubic-bezier(0.465, 0.183, 0.153, 0.946),
-          opacity 0.3s cubic-bezier(0.465, 0.183, 0.153, 0.946);
+        transition: anim.$transform-transition, anim.$opacity-transition;
         opacity: 1;
       }
     }
