Create appbar scrim

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -25,7 +25,8 @@ $elevations: (
   no-elevation: 0,
   status: 2,
   appbar: 4,
-  bottom-bar: 4,
+  bottom-bar: 3,
+  scrim: 12,
   drawer: 16,
 );
 
