--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -6,7 +6,7 @@
 // appbar
 .appbar {
   width: 100%;
-  height: 56px;
+  height: 3.5rem;
   padding-left: 1rem;
   padding-right: 1rem;
   background-color: variables.$primary-color;
@@ -48,6 +48,12 @@
   &--open &__bar--bottom {
     @include anim.animation-end {
       transform: rotate(-45deg) translate(5px, -5px);
+    }
+  }
+
+  &--open &__scrim {
+    @include anim.animation-end {
+      opacity: 1;
     }
   }
 
@@ -137,6 +143,36 @@
       @include anim.animation-start {
         transform: rotate(0deg);
       }
+    }
+  }
+
+  // appbar__scrim
+  &__scrim {
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 3.5rem;
+    left: 0;
+    pointer-events: none;
+    background-color: rgba(0, 0, 0, 0.32);
+
+    // animation start
+    @include anim.animation-start {
+      // z-index
+      @include mixins.z-index("scrim");
+      will-change: opacity;
+      opacity: 0;
+      transition: anim.$opacity-transition;
+    }
+
+    // xlarge-tablet
+    @include mixins.xlarge-tablet {
+      display: none;
+    }
+
+    // appbar__scrim--open
+    &--open {
+      opacity: 1;
     }
   }
 }
