--- a/sass/components/_friends.scss
+++ b/sass/components/_friends.scss
@@ -31,7 +31,7 @@
   &__img {
     width: 100%;
     height: 100%;
-    background-color: variables.$secondary-color;
+    background-color: variables.$primary-color;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -41,7 +41,7 @@
   &__img-name {
     font-size: 1rem;
     font-weight: 700;
-    color: #ffffff;
+    color: variables.$on-primary-color;
     text-transform: uppercase;
   }
 
