Create login error messages

--- a/sass/layout/_forms.scss
+++ b/sass/layout/_forms.scss
@@ -36,6 +36,17 @@
       border-width: 4px;
     }
   }
+
+  // form__error
+  &__error {
+    margin: 0.5rem 0;
+    color: variables.$error-color;
+    display: none;
+    // form__error--show
+    &--show {
+      display: block;
+    }
+  }
 }
 
 .seach-form {
