Fix messages file name

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -21,7 +21,7 @@
 @use "./components/carousel";
 @use "./components/slider";
 @use "./components/friends";
-@use "./components/messages.scss";
+@use "./components/messages";
 @use "./components/chat-friends";
 @use "./components/hero";
 
